FIX(styles.css): fix settings div so it can scroll in landscape orientation on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -106,6 +106,8 @@ footer {
     background-color: #fff;
     border-radius: 15px;
     width: 30vw;
+    max-height: 95vh;
+    overflow-y: scroll;
     padding: 10px;
 }
 
